# ShmupWarz

./: .gitignore  CMakeLists-artemis.txt  CMakeLists.txt  GNUmakefile  Shmupwarz  ShmupwarzInfo.plist  compile_commands.json  componentz.json  configure  readme.md  temp
.cache/clangd/index/: Components.h.D9A88203F26DB5EC.idx  Components.m.6D673B56905A3EAC.idx  Components.m.C23B3D86D8C2C72D.idx  Factory.h.711946CA0E36DA0C.idx  Factory.m.534FD44C96A46B4B.idx  Factory.m.CAF5B3BB78999619.idx  Game.h.2558F0C91E8D5F73.idx  Game.m.AEE4DF727D830B13.idx  Game.m.B2D79106EEE7FB38.idx  OpenGL.h.59E4A054C32BDC38.idx  OpenGL.m.3BAB7AB526A03FA7.idx  ResourceManager.h.DBB1B3F5A920B398.idx  ResourceManager.m.109FA4A4EB0050A2.idx  ResourceManager.m.755512E5ADC17F47.idx  Shader.h.CA23DF0E5AE467F2.idx  Shader.m.C2EE24FA0D54CF23.idx  Shader.m.E30686D34C8B600B.idx  Shmupwarz.h.446F4465795EA6B3.idx  Shmupwarz.m.1BA89784404D7AD5.idx  Shmupwarz.m.5C2C3D3A150DCF7C.idx  SpriteRenderer.h.FB53FC529D934CA2.idx  SpriteRenderer.m.4D6E0B0C64D3E094.idx  SpriteRenderer.m.57D4A0FA5BE16FD8.idx  Systems.h.C3862445E9A3554C.idx  Systems.m.072365085525FEDF.idx  Systems.m.1FDA4A7695BDCDE5.idx  Texture2D.h.6C4355C590F0177A.idx  Texture2D.m.C0A6E01EB8333DB3.idx  Texture2D.m.E08C73F2EF1E3DF1.idx  main.m.89DC552F43A286B0.idx  main.m.D0B5DC6493E8E4C5.idx  tglm.h.C3445E45876A48E8.idx  xna.h.BA22637BFEE5BC76.idx
include/: Components.h  Factory.h  Shmupwarz copy.h  Shmupwarz.h  Systems.h
include/Components/: Position.h  Velocity.h
include/Systems/: MovementSystem.h
include/systems/: AnimationSystem.h  CollisionSystem.h  InputSystem.h  PhysicsSystem.h  RemovalSystem.h  RenderSystem.h  SpawnSystem.h
src/: Components.m  Factory.m  Shmupwarz copy.m  Shmupwarz.m  Systems.m  main.m  test.m
src/Components/: Position.m  Velocity.m
src/Systems/: MovementSystem.m
src/systems/: AnimationSystem.m  CollisionSystem.m  InputSystem.m  PhysicsSystem.m  RemovalSystem.m  RenderSystem.m  SpawnSystem.m
